--- a/style.css
+++ b/style.css
@@ -20,3 +20,7 @@ input:focus,
 button:focus {
   outline: none;
 }
+
+header{
+  background-image: url('https://images.unsplash.com/photo-1510915361894-db8b60106cb1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+}
